[gd_scene load_steps=12 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://DeliusUnicase-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy.gd" type="Script" id=4]
[ext_resource path="res://ball.gd" type="Script" id=5]
[ext_resource path="res://sprite.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=4]

size = 64
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 64
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 17.5595, 60.1687 )

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 24.341

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 1.94727, 261.543 )

[node name="main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="counter" type="Node2D" parent="." index="0"]

[node name="player_count" type="Label" parent="counter" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 407.0
margin_top = 60.0
margin_right = 447.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="enemy_count" type="Label" parent="counter" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 567.0
margin_top = 60.0
margin_right = 607.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="top" type="StaticBody2D" parent="." index="1" groups=[
"wall",
]]

input_pickable = false
collision_layer = 1
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="Polygon2D" type="Polygon2D" parent="top" index="0"]

rotation = -3.14159
polygon = PoolVector2Array( 0.417858, 0.867428, 0.466502, -236.7, -34.9032, -236.7, -35.246, -37.246, -989.595, -34.5456, -990.57, -236.443, -1024.22, -236.931, -1021.29, -0.408308 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="top" index="1"]

build_mode = 0
polygon = PoolVector2Array( 0.665714, 0.724786, 1023.71, 1.41245, 1023.63, 237.202, 990.806, 237.525, 990.901, 34.2212, 35.9012, 35.837, 36.6566, 233.637, 0.12608, 233.637 )

[node name="bottom" type="StaticBody2D" parent="." index="2" groups=[
"wall",
]]

rotation = -3.14159
input_pickable = false
collision_layer = 1
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Polygon2D" type="Polygon2D" parent="bottom" index="0"]

position = Vector2( -1023.46, -603.818 )
rotation = -3.14159
polygon = PoolVector2Array( 0.417858, 0.867428, 0.466502, -236.7, -34.9032, -236.7, -35.246, -37.246, -989.595, -34.5456, -990.57, -236.443, -1024.22, -236.931, -1021.29, -0.408308 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="bottom" index="1"]

position = Vector2( -1024.59, -600.917 )
build_mode = 0
polygon = PoolVector2Array( 0.665714, 0.724786, 1023.71, 1.41245, 1024.03, 237.57, 990.806, 237.525, 990.901, 34.2212, 35.9012, 35.837, 36.6566, 233.637, 0.12608, 233.637 )

[node name="paddle" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 161.866, 241.937 )
collision_mask = 13
collision/safe_margin = 0.008
speed = 750

[node name="enemy" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 838.527, 241.937 )
script = ExtResource( 4 )
speed = 750

[node name="shape" parent="enemy" index="0"]

color = Color( 0, 0, 0, 1 )

[node name="goal" type="Area2D" parent="." index="5"]

position = Vector2( -2.15094, 0.35849 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal" index="0"]

position = Vector2( 1009.66, 301.834 )
shape = SubResource( 3 )

[node name="hit" type="Polygon2D" parent="goal" index="1"]

visible = false
polygon = PoolVector2Array( 988.641, 240.207, 1026.36, 240.207, 1026.36, 363.547, 988.735, 363.51 )
uv = PoolVector2Array(  )
color = Color( 1, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="goal_enemy" type="Area2D" parent="." index="6"]

position = Vector2( -2.95029, -0.356964 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_enemy" index="0"]

position = Vector2( 17.8319, 298.279 )
shape = SubResource( 3 )

[node name="hit" type="Polygon2D" parent="goal_enemy" index="1"]

visible = false
position = Vector2( -988.23, -1.85062 )
polygon = PoolVector2Array( 988.641, 240.207, 1026.36, 240.207, 1026.36, 363.547, 988.735, 363.51 )
uv = PoolVector2Array(  )
color = Color( 1, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="ball" type="KinematicBody2D" parent="." index="7" groups=[
"ball",
]]

position = Vector2( 512, 300 )
input_pickable = false
collision_layer = 4
collision_mask = 19
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Transform" ]
__meta__ = {
"_edit_group_": true
}
speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="Node2D" parent="ball" index="1"]

script = ExtResource( 6 )

[node name="center" type="Position2D" parent="ball/sprite" index="0"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="center_line" type="StaticBody2D" parent="." index="8"]

input_pickable = false
collision_layer = 8
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="center_line" index="0"]

position = Vector2( 512, 300 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="goal_line" type="StaticBody2D" parent="." index="9"]

input_pickable = false
collision_layer = 8
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_line" index="0"]

position = Vector2( 39.5782, 298.86 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="goal_line2" type="StaticBody2D" parent="." index="10"]

position = Vector2( 943.653, -3.34039 )
input_pickable = false
collision_layer = 8
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_line2" index="0"]

position = Vector2( 39.5782, 298.86 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="paddle_hit" from="paddle" to="." method="_on_paddle_paddle_hit"]

[connection signal="enemy_hit" from="enemy" to="." method="_on_enemy_enemy_hit"]

[connection signal="body_entered" from="goal" to="." method="_on_goal_body_entered"]

[connection signal="body_entered" from="goal_enemy" to="." method="_on_goal_enemy_body_entered"]


[editable path="enemy"]
